[package]
name = "securerand"
version = "0.1.0"
edition = "2021"
description = "a create that extends getrandom to harden the entropy and provide a more useful api"
license = "MIT"
repository = "https://github.com/AstralCupid/securerandom/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = "0.2"
anyhow = "1.0"
