[package]
name = "securerand"
version = "0.1.2"
edition = "2021"
description = "a create that extends getrandom to harden the entropy and provide a more useful api"
license = "MIT"
repository = "https://github.com/AstralCupid/securerandom/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["std"] }
anyhow = "1.0"
